# PyDoomClient

./: README.md  justfile  pyproject.toml  test_3d_renderer.py
pydoomclient/: __init__.py  __main__.py  camera3d.py  game.py  game3d.py  geometry3d.py  renderer.py  renderer3d.py  renderer_bridge.py  texture3d.py  wad.py
scripts/: download_wad.py  setup_dev.py
