[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydoomclient"
version = "0.1.0"
description = "A Python-based Doom client"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Joshua Szepietowski" },
]
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.5",
    "mypy>=1.3.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "PYI", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
